[project]
name = "2025-11-07-rag-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=4.0.0",
    "beautifulsoup4>=4.14.3",
    "bs4>=0.0.2",
    "cassio>=0.1.10",
    "chroma>=0.2.0",
    "chromadb>=1.5.9",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.136.1",
    "groq>=0.37.1",
    "ipykernel>=7.2.0",
    "langchain>=0.1.20",
    "langchain-community>=0.0.38",
    "langchain-core>=0.1.53",
    "langchain-groq>=0.1.5",
    "langchain-objectbox>=0.1.0",
    "langchain-openai>=0.1.7",
    "langchain-community",
    "langchainhub>=0.1.21",
    "langserve>=0.2.3",
    "mediawikiapi>=1.3",
    "pypdf>=6.12.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "sentence-transformers>=2.2.2",
    "sse-starlette>=3.4.4",
    "streamlit>=1.57.0",
    "uvicorn>=0.47.0",
    "wikibase-rest-api-client>=0.2.5",
    "wikipedia>=1.4.0",
]

[[tool.uv.index]]
url = "http://mirrors.aliyun.com/pypi/simple"
#url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
